@@ -1,3 +1,9 @@
+2011-06-28  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.8.4.4 Released
+
+	* AST-2011-011
+
 2011-06-22  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.8.4.3 Released.
